<resources>
    <string name="app_name">DevFinder</string>
    <string name="register_welcome_community_text">Welcome to our community</string>
    <string name="register_describe_let_people_know_text">Let people know who you are</string>
    <string name="next_text">Next</string>
    <string name="username_hint">Username</string>
    <string name="bio_hint">Bio</string>
    <string name="register_what_technologies_text">What technologies are you using ?</string>
    <string name="technologies_placeholder">Java, Android…</string>
    <string name="beginner_btn_text">I\'m a beginner</string>
    <string name="intermediate_btn_text">I\'m an intermediate</string>
    <string name="advance_btn_text">I\'m at advance level</string>
    <string name="register_what_level_text">What\'s your level ?</string>
    <string name="project_list_title">Projects</string>
    <string name="chat_list_title">Chat</string>
    <string name="enter_message_placeholder">Enter a message</string>
    <string name="send_btn_desc">Send the message</string>
    <string name="login_with_text">Login with</string>
    <string name="about_devfinder_text">About DevFinder</string>
    <string name="login_google_desc">A Google account</string>
    <string name="login_twitter_desc">A Twitter account</string>
    <string name="login_github_desc">A GitHub account</string>
    <string name="chat_with_user_desc">Chat with the user.</string>
    <string name="technologies_text">Technologies</string>
    <string name="projects_text">Projects</string>
    <string name="loginFragment_label">Login</string>
    <string name="body_text">If you have any doubt related to app development ask David</string>
    <string name="add_project_desc">Post a project</string>
    <string name="auth_error_message">Something went wrong when signing in.</string>
    <string name="devfinder_description_text">DevFinder is an app that helps you find a collaborator to work on a project together. Propose your project or find a project you find interesting.</string>
    <string name="title_text">Title</string>
    <string name="description_text">Description</string>
    <string name="view_count_desc">View count</string>
    <string name="title_dynamicfeature">Dynamic Feature</string>
    <string name="add_project_title">Add a new project</string>
    <string name="no_project_title_error_text">The title is empty.</string>
    <string name="cancel_registration_title">Cancel registration</string>
    <string name="do_you_cancel_registration">Do you really want to cancel the registration process ?</string>
    <string name="yes_text">Yes</string>
    <string name="no_text">No</string>
    <string name="separate_coma_text">Separate them with a come \",\"</string>
    <string name="confirm_add_project_title">Confirm</string>
    <string name="confirm_add_project_desc">Add the new project</string>
    <string name="start_conversation_text">Start a conversation</string>
    <string name="intersted_projet_text">Interested in the project ?</string>
    <string name="beginner_level_text">Beginner level</string>
    <string name="intermediate_level_text">Intermediate level</string>
    <string name="advanced_level_text">Advanced level</string>
    <string name="my_profile_title">My profile</string>
    <string name="sign_out_title">Sign out</string>
    <string name="profile_label">Profile</string>
    <string name="add_project_label">Add a new project</string>
</resources>