<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/ivProfilePicture"
                android:layout_width="@dimen/profile_picture_size"
                android:layout_height="@dimen/profile_picture_size"
                android:layout_margin="@dimen/profile_paddingHorizontal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.DevFinder.CornerSize50Percent"
                />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/profile_name_marginLeft"
                android:layout_marginBottom="@dimen/profile_name_marginBottom"
                android:textAppearance="?attr/textAppearanceHeadline4"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintBottom_toTopOf="@id/tvLevel"
                app:layout_constraintLeft_toRightOf="@id/ivProfilePicture"
                app:layout_constraintRight_toLeftOf="@id/ivChat"
                app:layout_constraintTop_toTopOf="@id/ivProfilePicture"
                app:layout_constraintVertical_chainStyle="packed"
                tools:text="FeepIn"
                />

            <TextView
                android:id="@+id/tvLevel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?attr/textAppearanceBody1"
                android:textStyle="italic"
                app:layout_constraintBottom_toBottomOf="@id/ivProfilePicture"
                app:layout_constraintLeft_toLeftOf="@id/tvName"
                app:layout_constraintRight_toRightOf="@id/tvName"
                app:layout_constraintTop_toBottomOf="@id/tvName"
                tools:text="Beginner developer"
                />

            <ImageView
                android:id="@+id/ivChat"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:contentDescription="@string/chat_with_user_desc"
                android:padding="@dimen/profile_chat_button_padding"
                android:src="@drawable/ic_chat"
                app:layout_constraintBottom_toBottomOf="@id/ivProfilePicture"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/ivProfilePicture"
                app:tint="?attr/colorPrimary"
                />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/profile_paddingHorizontal"
                android:layout_marginTop="@dimen/profile_elements_vertical_gap"
                android:alpha="0.8"
                android:ellipsize="end"
                android:maxLines="4"
                android:textAppearance="?attr/textAppearanceBody1"
                app:layout_constraintTop_toBottomOf="@id/ivProfilePicture"
                tools:text="A JavaScript ecosystem enthusiast. Over 9+ years in commerciaA JavaScript ecosystem enthusiast. A JavaScript ecosystem enthusiast.l p A JavaScript ecosystem enthusiast. rojects in automotive, entertainment, games, and e-commerce."
                />

            <TextView
                android:id="@+id/tvTechnologies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_elements_vertical_gap"
                android:text="@string/technologies_text"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintLeft_toLeftOf="@id/ivProfilePicture"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvTechnologies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/profile_rvTechnologies_padding"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTechnologies"
                app:spanCount="2"
                />

            <TextView
                android:id="@+id/tvProjects"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/profile_elements_vertical_gap"
                android:text="@string/projects_text"
                android:textAppearance="?attr/textAppearanceHeadline5"
                app:layout_constraintLeft_toLeftOf="@id/ivProfilePicture"
                app:layout_constraintTop_toBottomOf="@id/rvTechnologies"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvProjects"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_rvProjects_height"
                android:orientation="vertical"
                android:padding="@dimen/profile_rvProjects_padding"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintTop_toBottomOf="@id/rvProjects"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>